--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,13 @@
-:root{
-    --main-color:#F2F2F2;
-    --second-color: #1b0106;
-    --text-white:#ffffff;
-    --button-color:#D92938;
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-h2,p{
-    color: var(--text-white) !important;
-}
-body::-webkit-scrollbar {
-    width: 13px;
-    background: var(--second-color);
-  }
-  
-  body::-webkit-scrollbar-thumb {
-    background: var(--text-white);
-    border-radius: 50px;
-    border: 1px solid #0a141d;
-  }
-  body::-webkit-scrollbar-thumb:hover {
-    background: rgb(102, 102, 102);
-  }
-
-.seccion-folleto{
-    display: flex;
-    justify-content: center;
-    background-color: var(--second-color);
-}
-.descripcion-botella{
-    width: 30%;
-    background-color: gray;
-}
-
 
 /*nav*/
+.nav-link{font-family: "Merriweather", serif;}
+
 .iconowines{
     width: 75px;
     height: 75px;
@@ -45,8 +20,103 @@ body::-webkit-scrollbar {
     color: var(--text-white) !important;
     
 }
+/*boton hamburgesa de la nav*/
+.navbar-toggler {
+  border-color: white !important; /* Cambia el borde del botón a blanco */
+}
+.navbar-toggler-icon {
+  
+  background-image: url("data:image/svg+xml;charset=UTF8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
+}
+/*boton hamburgesa de la nav*/
+
+/*header*/
+.carousel-control-next-icon {
+  background-color: var(--button-color); /* Cambia a tu color deseado */
+  border-radius: 50%; /* Para un fondo circular, si es necesario */
+}
+.carousel-control-prev-icon {
+  background-color: var(--button-color); /* Cambia a tu color deseado */
+  border-radius: 50%; /* Para un fondo circular, si es necesario */
+}
+/*header*/
+
+/*nav*/
+
+:root{
+    --main-color:#F2F2F2;
+    --second-color: #292538;
+    --text-white:#ffffff;
+    --button-color:#19233e;
+}
+h2{
+    color: var(--text-white) !important;
+}
+
+body{
+  background-color: #f0f0f0;
+}
+/*section-body*/
+section{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 100px;
+}
+
+.card{
+  width: 325px;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+  margin: 20px;
+}
+.card img{
+  width: 100%;
+  height: auto;
+}
+.card-content{
+  padding: 16px;
+
+}
+.card-content h3{
+  font-family:"Merriweather", serif;
+  margin-bottom: 8px;
+}
+.card-content p{
+  color: #666;
+  font-size: 15px;
+  line-height: 1.3;
+}
+.card-content .btn{
+  display: inline-block;
+  padding: 8px 16px;
+  background-color: var(--button-color);
+  text-decoration: none;
+  border-radius: 4px;
+  margin-top: 16px;
+  color: #fff;
+}
+/*section-body*/
 
 
+
+/*scrollbar*/
+body::-webkit-scrollbar {
+  width: 13px;
+  background: var(--second-color);
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--text-white);
+  border-radius: 50px;
+  border: 1px solid #0a141d;
+}
+body::-webkit-scrollbar-thumb:hover {
+  background: rgb(102, 102, 102);
+}
+/*scrollbar*/
 
 /*footer*/
 footer {
