--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,29 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root{
+  --main-color:#F2F2F2;
+  --second-color: #292538;
+  --color-navy: #19233e; /* Color base para nav, footer y botones */
+  --color-navy-dark: #141c25;
+  --color-light: #ffffff; /* Blanco, para texto o fondo */
+  --color-gray: #f0f0f0; /* Gris claro, para fondos secundarios */
+  --color-dark-gray: #333333; /* Gris oscuro, para texto */
+  --color-accent: #4a90e2; /* Azul claro, para enlaces o elementos destacados */
+  --color-hover: #ebebeb; /* Un color más oscuro para hover */
+  --color-warning: #e74c3c; /* Rojo para mensajes de advertencia */
+}
+/*alert color configuracion*/
+.swal2-confirm {
+  background-color: var(--color-navy); /* Cambia el color de fondo */
+  color: white; /* Cambia el color del texto */
+}
+
+.swal2-cancel {
+  background-color: var(--color-warning); /* Cambia el color de fondo */
+  color: white; /* Cambia el color del texto */
+}
+/*alert color configuracion*/
 
 /*nav*/
 .nav-link{font-family: "Merriweather", serif;}
@@ -14,10 +37,10 @@
 }
 
 .botonera{
-    background-color: var(--second-color);
+    background-color: var(--color-navy);
 }
 .nav-link{
-    color: var(--text-white) !important;
+    color: var(--color-light) !important;
     
 }
 /*boton hamburgesa de la nav*/
@@ -28,29 +51,48 @@
   
   background-image: url("data:image/svg+xml;charset=UTF8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
 }
+
+.nav-link {
+  position: relative; /* Para posicionar el borde correctamente */
+  padding-top: 10px; /* Espacio para el borde */
+}
+
+.nav-link::before {
+  content: "";
+  position: absolute;
+  top: 0; /* Coloca el borde en la parte superior */
+  left: 0;
+  right: 0;
+  height: 3px; /* Grosor del borde */
+  background-color: transparent; /* Color del borde inicial */
+  transition: background-color 0.3s; /* Suaviza la transición del color */
+}
+
+.nav-link:hover::before {
+  background-color: var(--main-color); /* Cambia a tu color deseado al pasar el mouse */
+}
+
+.nav-link.active::before {
+  background-color: var(--main-color); /* Color del borde cuando está activo */
+}
+
 /*boton hamburgesa de la nav*/
 
 /*header*/
 .carousel-control-next-icon {
-  background-color: var(--button-color); /* Cambia a tu color deseado */
+  background-color: var(--color-navy); /* Cambia a tu color deseado */
   border-radius: 50%; /* Para un fondo circular, si es necesario */
 }
 .carousel-control-prev-icon {
-  background-color: var(--button-color); /* Cambia a tu color deseado */
+  background-color: var(--color-navy); /* Cambia a tu color deseado */
   border-radius: 50%; /* Para un fondo circular, si es necesario */
 }
 /*header*/
 
 /*nav*/
 
-:root{
-    --main-color:#F2F2F2;
-    --second-color: #292538;
-    --text-white:#ffffff;
-    --button-color:#19233e;
-}
 h2{
-    color: var(--text-white) !important;
+    color: var(--color-light) !important;
 }
 
 body{
@@ -92,11 +134,15 @@ section{
 .card-content .btn{
   display: inline-block;
   padding: 8px 16px;
-  background-color: var(--button-color);
+  background-color: var(--color-navy);
   text-decoration: none;
   border-radius: 4px;
   margin-top: 16px;
   color: #fff;
+}
+.card-content .btn:hover{
+  background-color: var(--color-hover);
+  color: var(--color-dark-gray);
 }
 /*section-body*/
 
@@ -105,11 +151,11 @@ section{
 /*scrollbar*/
 body::-webkit-scrollbar {
   width: 13px;
-  background: var(--second-color);
+  background: var(--color-navy);
 }
 
 body::-webkit-scrollbar-thumb {
-  background: var(--text-white);
+  background: var(--color-light);
   border-radius: 50px;
   border: 1px solid #0a141d;
 }
@@ -121,7 +167,7 @@ body::-webkit-scrollbar-thumb:hover {
 /*footer*/
 footer {
     width: auto;
-    background-color: var(--second-color);
+    background-color: var(--color-navy)
   }
   footer ul li {
     list-style-type: none;
@@ -156,7 +202,7 @@ footer {
     stroke: white;
   }
   footer .group1-footer .red-social a:hover {
-    background-color: var(--button-color);
+    background-color: var(--color-navy);
   }
   footer .group1-footer .red-social a h2 {
     font-size: 1.2em;
@@ -169,7 +215,7 @@ footer {
     margin-bottom: 10px;
   }
   footer .group2-footer {
-    background-color: var(--second-color);
+    background-color: var(--color-navy-dark);
     padding: 15px 10px;
     text-align: center;
     color: #e9f5ec;
@@ -181,10 +227,17 @@ footer {
     padding: 0;
   }
   footer .group3-footer ul li:hover {
-    background-color: var(--button-color);
+    background-color: var(--color-hover);
     transition: all 300ms ease;
   }
   footer .group3-footer ul li a {
     color: #e9f5ec;
+  }
+  footer .group3-footer ul li a:hover{
+    color:var(--color-dark-gray);
+  }
+  .red-social-footer:hover{
+    background-color: var(--color-hover) !important;
+
   }
 /*footer*/
