--- a/css/styles.css
+++ b/css/styles.css
@@ -1,152 +1,454 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-:root{
-  --main-color:#F2F2F2;
+
+:root {
+  --main-color: #F2F2F2;
   --second-color: #292538;
-  --color-navy: #19233e; /* Color base para nav, footer y botones */
+  --color-navy: #19233e;
+  /* Color base para nav, footer y botones */
   --color-navy-dark: #141c25;
-  --color-light: #ffffff; /* Blanco, para texto o fondo */
-  --color-gray: #f0f0f0; /* Gris claro, para fondos secundarios */
-  --color-dark-gray: #333333; /* Gris oscuro, para texto */
-  --color-accent: #4a90e2; /* Azul claro, para enlaces o elementos destacados */
-  --color-hover: #ebebeb; /* Un color más oscuro para hover */
-  --color-warning: #e74c3c; /* Rojo para mensajes de advertencia */
+  --color-light: #ffffff;
+  /* Blanco, para texto o fondo */
+  --color-gray: #f0f0f0;
+  /* Gris claro, para fondos secundarios */
+  --color-dark-gray: #333333;
+  /* Gris oscuro, para texto */
+  --color-hover: #ebebeb;
+  /* Un color más oscuro para hover */
+  --color-warning: #e74c3c;
+  /* Rojo para mensajes de advertencia */
+  --transition: all 0.3s ease-in-out;
+  --gradient: linear-gradient(90deg, rgba(25, 35, 62, 1) 0%, rgba(25, 35, 62, 1) 32%, rgba(6, 41, 80, 1) 100%);
 }
+
+p {
+  color: var(--color-light);
+}
+
+/*header nuevo*/
+.hero {
+  background-image: url('https://images.unsplash.com/photo-1506377247377-2a5b3b417ebb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80');
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+}
+
+.hero-content h1 {
+  font-size: 3.5rem;
+  margin-bottom: 1rem;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.hero-content p {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+/*header nuevo*/
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+
+}
+
+.grid {
+  max-width: 800px;
+  margin: auto;
+}
+
+.flex-container {
+  display: flex;
+  margin-bottom: 20px;
+  /* Espacio entre filas */
+}
+
+.text,
+.image {
+  flex: 1;
+  /* Para que ocupen el mismo espacio */
+  border: 1px solid #ccc;
+  padding: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.image img {
+  width: 100%;
+  height: auto;
+}
+
+
 /*alert color configuracion*/
 .swal2-confirm {
-  background-color: var(--color-navy); /* Cambia el color de fondo */
-  color: white; /* Cambia el color del texto */
+  background-color: var(--color-navy);
+  /* Cambia el color de fondo */
+  color: white;
+  /* Cambia el color del texto */
 }
 
 .swal2-cancel {
-  background-color: var(--color-warning); /* Cambia el color de fondo */
-  color: white; /* Cambia el color del texto */
+  background-color: var(--color-warning);
+  /* Cambia el color de fondo */
+  color: white;
+  /* Cambia el color del texto */
 }
+
 /*alert color configuracion*/
 
 /*nav*/
-.nav-link{font-family: "Merriweather", serif;}
-
-.iconowines{
-    width: 75px;
-    height: 75px;
+.navbar {
+  transition: top 0.3s;
+  position: fixed;
+  /* Mantiene la navbar fija en la parte superior */
+  top: 0;
+  /* Inicialmente en la parte superior */
+  width: 100%;
+  /* Ancho completo */
+  z-index: 1000;
 }
 
-.botonera{
-    background-color: var(--color-navy);
+.nav-link {
+  font-family: "Merriweather", serif;
 }
-.nav-link{
-    color: var(--color-light) !important;
-    
+
+.navbar-nav .nav-link.active {
+  color: var(--color-light);
 }
+
+.iconowines {
+  width: 75px;
+  height: 75px;
+}
+
+.botonera {
+  background: var(--gradient);
+}
+
+.nav-link {
+  color: var(--color-light);
+
+}
+
 /*boton hamburgesa de la nav*/
 .navbar-toggler {
-  border-color: white !important; /* Cambia el borde del botón a blanco */
+  border-color: white
+    /* Cambia el borde del botón a blanco */
 }
+
 .navbar-toggler-icon {
-  
+
   background-image: url("data:image/svg+xml;charset=UTF8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
 }
 
 .nav-link {
-  position: relative; /* Para posicionar el borde correctamente */
-  padding-top: 10px; /* Espacio para el borde */
+  position: relative;
+  /* Para posicionar el borde correctamente */
+  padding-top: 10px;
+  /* Espacio para el borde */
 }
 
 .nav-link::before {
   content: "";
   position: absolute;
-  top: 0; /* Coloca el borde en la parte superior */
+  top: 0;
+  /* Coloca el borde en la parte superior */
   left: 0;
   right: 0;
-  height: 3px; /* Grosor del borde */
-  background-color: transparent; /* Color del borde inicial */
-  transition: background-color 0.3s; /* Suaviza la transición del color */
+  height: 3px;
+  /* Grosor del borde */
+  background-color: transparent;
+  /* Color del borde inicial */
+  transition: background-color 0.3s;
+  /* Suaviza la transición del color */
 }
 
 .nav-link:hover::before {
-  background-color: var(--main-color); /* Cambia a tu color deseado al pasar el mouse */
+  background-color: var(--color-light);
+  /* Cambia a tu color deseado al pasar el mouse */
 }
 
-.nav-link.active::before {
-  background-color: var(--main-color); /* Color del borde cuando está activo */
+.nav-link.active {
+  border-top: 0.5px solid var(--color-light);
+  /* Mantener el borde cuando está activo */
+  color: var(--color-light);
+  /* Asegúrate de que también cambie el color si es necesario */
+}
+
+.nav-link:hover {
+  color: var(--color-light);
 }
 
 /*boton hamburgesa de la nav*/
 
-/*header*/
-.carousel-control-next-icon {
-  background-color: var(--color-navy); /* Cambia a tu color deseado */
-  border-radius: 50%; /* Para un fondo circular, si es necesario */
-}
-.carousel-control-prev-icon {
-  background-color: var(--color-navy); /* Cambia a tu color deseado */
-  border-radius: 50%; /* Para un fondo circular, si es necesario */
-}
-/*header*/
 
 /*nav*/
 
-h2{
-    color: var(--color-light) !important;
+
+h2 {
+  color: var(--color-light);
 }
 
-body{
+body {
   background-color: #f0f0f0;
 }
-/*section-body*/
-section{
+
+/*section info botella*/
+.h2-white {
+  color: var(--color-light);
+  font-weight: 800;
+  font-size: 2rem;
+}
+
+.info-container {
   display: flex;
+  /* Usar flexbox */
   justify-content: center;
-  flex-wrap: wrap;
-  margin-top: 100px;
-}
-
-.card{
-  width: 325px;
-  background-color: #f0f0f0;
-  border-radius: 8px;
-  overflow: hidden;
-  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+  align-items: center;
+  /* Alinear verticalmente */
+  border: 1px solid black;
+  background: rgb(25, 35, 62);
+  background: -moz-linear-gradient(90deg, rgba(25, 35, 62, 1) 0%, rgba(25, 35, 62, 1) 32%, rgba(6, 41, 80, 1) 100%);
+  background: -webkit-linear-gradient(90deg, rgba(25, 35, 62, 1) 0%, rgba(25, 35, 62, 1) 32%, rgba(6, 41, 80, 1) 100%);
+  background: linear-gradient(90deg, rgba(25, 35, 62, 1) 0%, rgba(25, 35, 62, 1) 32%, rgba(6, 41, 80, 1) 100%);
+  border-radius: 10px;
   margin: 20px;
+  width: auto;
+
 }
-.card img{
+
+.info-container-text {
+  width: 50%;
+  /* 50% de ancho */
+  padding: 20px;
+  /* Espaciado interno */
+  color: var(--color-light);
+}
+
+.info-image {
   width: 100%;
+  /* Ancho completo del contenedor */
+  max-width: 200px;
+  /* Ajusta este valor según lo necesites */
   height: auto;
-}
-.card-content{
-  padding: 16px;
+  /* Mantener la proporción de la imagen */
+  object-fit: cover;
+  /* Ajustar la imagen a su contenedor */
 
 }
-.card-content h3{
-  font-family:"Merriweather", serif;
-  margin-bottom: 8px;
+
+.info-image:hover {
+  transform: scale(1.1);
+  transition: var(--transition);
 }
-.card-content p{
-  color: #666;
-  font-size: 15px;
-  line-height: 1.3;
+
+/*section info botella*/
+
+/*section gallery*/
+.image-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  padding: 1rem;
+  background: var(--gradient);
+  margin: 20px;
+  border-radius: 10px;
 }
-.card-content .btn{
-  display: inline-block;
-  padding: 8px 16px;
-  background-color: var(--color-navy);
-  text-decoration: none;
+
+.grid-item img,
+.pack-item img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 10px;
+  transition: var(--transition);
+}
+
+.grid-item img:hover,
+.pack-item img:hover {
+  transform: scale(1.05);
+}
+
+/*section gallery*/
+
+/*section form*/
+
+.h1-contact {
+  background: var(--gradient);
+  color: var(--color-light);
+  border-radius: 10px;
+}
+
+.form-info {
+  background: var(--gradient);
+}
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+}
+
+.section-form {
+  padding: 5px;
+  background-color: #fff;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  max-width: 800px;
+  margin: auto;
+  border-radius: 8px;
+  margin-top: 160px;
+  margin-bottom: 30px;
+
+
+}
+
+.section-form-container h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.div-form {
+  flex: 1;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
   border-radius: 4px;
-  margin-top: 16px;
-  color: #fff;
+  transition: border-color 0.3s;
 }
-.card-content .btn:hover{
-  background-color: var(--color-hover);
-  color: var(--color-dark-gray);
+
+input:focus,
+textarea:focus {
+  border-color: #007bff;
 }
-/*section-body*/
 
+button {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
 
+button:hover {
+  background-color: #0056b3;
+}
+
+.form-info {
+  background-color: #f8f9fa;
+  padding: 15px;
+  border-radius: 4px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+@media (min-width: 600px) {
+  .contact-container {
+    flex-direction: row;
+  }
+
+  .div-form,
+  .form-info {
+    flex: 1;
+  }
+}
+
+/*section form*/
+
+/*personalizacion de botones*/
+.btn {
+  --color: var(--color-light);
+  --color2: var(--color-light);
+  padding: 0.8em 1.75em;
+  background-color: transparent;
+  border-radius: 6px;
+  border: .3px solid var(--color);
+  transition: .5s;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  z-index: 1;
+  font-weight: 600;
+  font-size: 17px;
+  font-family: 'Roboto', 'Segoe UI', sans-serif;
+  text-transform: uppercase;
+  color: var(--color);
+}
+
+.btn::after,
+.btn::before {
+  content: '';
+  display: block;
+  height: 100%;
+  width: 100%;
+  transform: skew(90deg) translate(-50%, -50%);
+  position: absolute;
+  inset: 50%;
+  left: 25%;
+  z-index: -1;
+  transition: .5s ease-out;
+  background-color: var(--color-light);
+
+}
+
+.btn::before {
+  top: -50%;
+  left: -25%;
+  transform: skew(90deg) rotate(180deg) translate(-50%, -50%);
+}
+
+.btn:hover::before {
+  transform: skew(45deg) rotate(180deg) translate(-50%, -50%);
+  color: var(--color-gray);
+}
+
+.btn:hover::after {
+  transform: skew(45deg) translate(-50%, -50%);
+  color: var(--color-gray);
+}
+
+.btn:hover {
+
+  color: var(--color-navy-dark);
+}
+
+.btn:active {
+  filter: brightness(.7);
+  transform: scale(.98);
+}
+
+/*personalizacion de botones*/
 
 /*scrollbar*/
 body::-webkit-scrollbar {
@@ -159,85 +461,104 @@ body::-webkit-scrollbar-thumb {
   border-radius: 50px;
   border: 1px solid #0a141d;
 }
+
 body::-webkit-scrollbar-thumb:hover {
   background: rgb(102, 102, 102);
 }
+
 /*scrollbar*/
 
 /*footer*/
 footer {
-    width: auto;
-    background-color: var(--color-navy)
-  }
-  footer ul li {
-    list-style-type: none;
-    display: inline-block;
-    background-color: #0a1a2a;
-    padding: 5px 10px;
-    text-align: center;
-  }
-  footer ul li a {
-    text-decoration: none;
-  }
-  footer .group1-footer {
-    width: 100%;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 50px;
-    padding: 45px 10px;
-  }
-  footer .group1-footer .red-social a {
-    display: inline-block;
-    text-decoration: none;
-    width: 60px;
-    height: 60px;
-    line-height: 60px;
-    margin: 20px 10px;
-    background-color: rgb(187, 186, 186);
-    text-align: center;
-    transition: all 300ms ease;
-  }
-  footer .group1-footer .red-social a img {
-    stroke: white;
-  }
-  footer .group1-footer .red-social a:hover {
-    background-color: var(--color-navy);
-  }
-  footer .group1-footer .red-social a h2 {
-    font-size: 1.2em;
-  }
-  footer .group1-footer .box h2 {
-    font-size: 1.2em;
-  }
-  footer .group1-footer .box p {
-    color: #e9f5ec;
-    margin-bottom: 10px;
-  }
-  footer .group2-footer {
-    background-color: var(--color-navy-dark);
-    padding: 15px 10px;
-    text-align: center;
-    color: #e9f5ec;
-  }
-  footer .group2-footer small {
-    font-size: 15px;
-  }
-  footer .group3-footer ul {
-    padding: 0;
-  }
-  footer .group3-footer ul li:hover {
-    background-color: var(--color-hover);
-    transition: all 300ms ease;
-  }
-  footer .group3-footer ul li a {
-    color: #e9f5ec;
-  }
-  footer .group3-footer ul li a:hover{
-    color:var(--color-dark-gray);
-  }
-  .red-social-footer:hover{
-    background-color: var(--color-hover) !important;
+  width: auto;
+  background: var(--gradient)
+}
 
-  }
+footer ul li {
+  list-style-type: none;
+  display: inline-block;
+  background-color: #0a1a2a;
+  padding: 5px 10px;
+  text-align: center;
+}
+
+footer ul li a {
+  text-decoration: none;
+}
+
+footer .group1-footer {
+  width: 100%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 50px;
+  padding: 45px 10px;
+}
+
+footer .group1-footer .red-social a {
+  display: inline-block;
+  text-decoration: none;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  margin: 20px 10px;
+  background-color: rgb(187, 186, 186);
+  text-align: center;
+  transition: all 300ms ease;
+}
+
+footer .group1-footer .red-social a img {
+  stroke: white;
+}
+
+footer .group1-footer .red-social a:hover {
+  background-color: var(--color-navy);
+}
+
+footer .group1-footer .red-social a h2 {
+  font-size: 1.2em;
+}
+
+footer .group1-footer .box h2 {
+  font-size: 1.2em;
+}
+
+footer .group1-footer .box p {
+  color: #e9f5ec;
+  margin-bottom: 10px;
+}
+
+footer .group2-footer {
+  background-color: var(--color-navy-dark);
+  padding: 15px 10px;
+  text-align: center;
+  color: #e9f5ec;
+}
+
+footer .group2-footer small {
+  font-size: 15px;
+}
+
+footer .group3-footer ul {
+  padding: 0;
+}
+
+footer .group3-footer ul li:hover {
+  background-color: var(--color-hover);
+  transition: all 300ms ease;
+}
+
+footer .group3-footer ul li a {
+  color: #e9f5ec;
+}
+
+footer .group3-footer ul li a:hover {
+  color: var(--color-dark-gray);
+}
+
+.red-social-footer:hover {
+  background-color: var(--color-hover) !important;
+
+}
+
 /*footer*/
