--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -20,6 +20,7 @@
 
 .iconowines {
     transition: transform 0.2s ease; /* Define la propiedad, duración y función de tiempo */
+    width: 250px;
 }
 
 .iconowines:hover {
