--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
 h2 {
@@ -30,7 +31,7 @@ body {
   font-size: 17px;
   font-family: "Roboto", "Segoe UI", sans-serif;
   text-transform: uppercase;
-  color: var(--font-dark);
+  color: var(--font-light);
 
   &:hover {
     background: var(--bg-gradient);
