--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,11 +2,15 @@
 @import "_vars";
 @import "_index.scss";
 @import "_nav.scss";
-@import "_extend.scss";
 @import "_general.scss";
+@import "_extend.scss";
+@import "_nosotros.scss";
 @import "_contact.scss";
 @import "_footer.scss";
 @import "_nosotros.scss";
+@import "_laflota.scss";
+@import "_error404.scss";
 @import "_medias.scss"
+
 
 
