--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -78,6 +78,12 @@
     padding: 20px;
     /* Espaciado interno */
     color: var(--font-light);
+    #btn-ficha{
+        margin-top: 1rem;
+    }
+    .span-vino{
+        display: block;
+    }
 }
 
 .info-image {
@@ -89,11 +95,12 @@
     /* Mantener la proporción de la imagen */
     object-fit: cover;
     /* Ajustar la imagen a su contenedor */
+    transition: var(--transition);
 }
 
 .info-image:hover {
     transform: scale(1.1);
-    transition: var(--transition);
+    
 }
 
 .logo-info{
