--- a/scss/_laflota.scss
+++ b/scss/_laflota.scss
@@ -32,6 +32,10 @@
     height: auto;
     transform: translateZ(50px);
     filter: drop-shadow(0 20px 30px rgba(0, 0, 0, 0.2));
+    transition: var(--transition);
+    &:hover{
+        transform: scale(1.2);
+    }
 
 }
 
