--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -2,6 +2,10 @@
     color: var(--font-light);
 }
 
+.showcase-features{
+    padding-left: 0;
+}
+
 .nosotros-container{
     width: 100%;
     margin: 0 auto;
@@ -14,6 +18,8 @@
     align-items: center;
     flex-wrap: wrap;
     background: var(--bg-gradient);
+    margin: 1rem;
+    border-radius: 1rem;
 }
 .about-image{
     flex: 1;
@@ -24,6 +30,7 @@
         height: auto;
         display: block;
         transition: 1s ease;
+        border-radius: 1rem;
         &:hover{
             transform: scale(1.2);
         }
@@ -36,6 +43,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 1rem;
     
     h2{
         font-size: 1.1rem;
@@ -44,7 +52,7 @@
     }
     p{
         font-size: 0.9rem;
-        line-height: 1.5;
+        line-height: 1.6;
         color: var(--font-light);
     }
      .btn{
