--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 * {
   margin: 0;
   padding: 0;
@@ -155,6 +158,10 @@ body::-webkit-scrollbar-thumb:hover {
 }
 .pulse {
   animation: pulse-animation 2s infinite;
+}
+
+.hidden {
+  opacity: 0; 
 }
 
 @keyframes pulse-animation {
